--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ os:
   - linux
   - osx
 julia:
-  - 0.6
+  - 0.7
   - nightly
 notifications:
   email: false
@@ -35,4 +35,4 @@ after_success:
   - julia -e 'cd(Pkg.dir("AsyPlots")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
 after_success:
   - julia -e 'Pkg.add("Documenter")'
-  - julia -e 'cd(Pkg.dir("AsyPlots")); include(joinpath("docs", "make.jl"))'
+#  - julia -e 'cd(Pkg.dir("AsyPlots")); include(joinpath("docs", "make.jl"))'
